--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,8 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-upload_port= COM3
+#upload_port= COM3
+baudrate = 115200
 framework = arduino
 lib_deps =
     madhephaestus/ESP32Encoder@^0.9.2
